deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hooni-folio-svc
  namespace: hooni-folio
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 80
  selector:
    app: hooni-folio
